# rust-opengl-engine

./: Cargo.toml  README.md
shaders/: default.frag  default.vert  light.frag  light.vert
src/: camera.rs  ibo.rs  main.rs  mesh.rs  point_light.rs  shader.rs  texture.rs  utils.rs  vao.rs  vbo.rs  vertex.rs
