[package]
name = "opengl-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
log = "0.4.14"
simplelog = "0.11.1"
glam = "0.20.2"
image = "0.23.14"
egui = "0.16.1"
egui_glow = "0.16.0"
glow = "0.11.2"