[package]
name = "opengl-engine"
version = "0.1.0"
edition = "2021"

[profile.dist]
inherits = "release"
lto = true
strip = true
panic = "abort"

[dependencies]
glutin = "0.28.0"
log = "0.4.14"
simplelog = "0.11.2"
glam = "0.20.2"
image = { version = "0.24.1", default-features = false, features = ["png", "jpeg"] }